--- a/templates/auth/resend_verification_email.html
+++ b/templates/auth/resend_verification_email.html
@@ -1,10 +1,10 @@
 
 {% extends "base.html" %}
-{% block title %} Login {% endblock %}
+{% block title %} resend verification email {% endblock %}
 
 {% block content %}
 
-<h1 class="container lead my-4">login...</h1>
+<h1 class="container lead my-4">resend verification email...</h1>
 <div class="container">
     <div class="row my-4">
         <form method="POST">
@@ -18,27 +18,11 @@
                     class="form-control"
                 />
             </div>
-            <div class="mb-3">
-                <label>password</label>
-                <input
-                    type="password"
-                    required
-                    placeholder="password"
-                    name="password"
-                    class="form-control"
-                />
-            </div>
             <button type="submit" class="btn btn-outline-primary btn-sm">
                 submit
             </button>
         </form>
     </div>
-
-    <div class="d-flex">
-        <a class="page-link" href="/reset-password">reset password</a>
-        <a class="page-link ms-2" href="/email-verify-resend">verification email</a>
-    </div>
-
 </div>
 
 {% endblock %}
