--- a/templates/components/alerts.html
+++ b/templates/components/alerts.html
@@ -2,7 +2,7 @@
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
     <div id="liveToast" class="toast fade show" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
-            <strong class="me-auto">Bootstrap</strong>
+            <strong class="me-auto">Alerts..!</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Закрыть"></button>
         </div>
         <div class="toast-body">
