--- a/templates/user/update.html
+++ b/templates/user/update.html
@@ -1,30 +1,19 @@
 {% extends "base.html" %}
-{% block title %} update {{ obj.title }} {% endblock%}
+{% block title %} update {{ obj.email }} {% endblock%}
 
 {% block content %}
 
+<h1 class="container lead my-4">update user</h1>
+
     <div class="container">
         <div class="row my-5">
-            <h1 class="display-6 mb-3">update user</h1>
             <form method="POST">
                 <div class="mb-3">
                     <input
                         type="text"
-                        required
                         placeholder="name"
                         name="name"
                         value="{{ obj.name }}"
-                        class="form-control"
-                    />
-                </div>
-
-                <div class="mb-3">
-                    <input
-                        type="email"
-                        required
-                        placeholder="email"
-                        name="email"
-                        value="{{ obj.email }}"
                         class="form-control"
                     />
                 </div>
@@ -32,9 +21,8 @@
                     <label>password</label>
                     <input
                         type="password"
-                        required
                         placeholder="password"
-                        value="{{ password }}"
+                        value="{{ obj.password }}"
                         name="password"
                         class="form-control"
                     />
