--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,3 +15,11 @@
 	align-items: stretch;
 	align-content: stretch;
 }
+.cmt_list{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
+	align-content: space-between;
+}
