--- a/templates/item/detail.html
+++ b/templates/item/detail.html
@@ -9,11 +9,11 @@
         <div class="card-body">
         <ul class="list-group list-group-flush">
             <sup>item title</sup>
-            <li class="list-group-item mb-4">{{ obj.title }}</li>
+            <li class="list-group-item mb-3">{{ obj.title }}</li>
             <sup>description</sup>
-            <li class="list-group-item mb-4">{{ obj.description | safe }}</li>
+            <li class="list-group-item mb-3">{{ obj.description | safe }}</li>
             <sup>aulior</sup>
-            <li class="list-group-item mb-4">{{ obj.owner_item_id }}</li>
+            <li class="list-group-item">{{ obj.owner_item_id }}</li>
             {% if obj.image_url %}
             <sup>image</sup>
             <li class="list-group-item">
@@ -37,57 +37,34 @@
 <div class="container mt-3">
     <div class="card">
         <div class="card-header">
-            <sub>comment</sub>
+            <h2 class="lead">comment</h2>
+            <a class="btn btn-outline-primary btn-sm float-start" href="/item-detail/{{ obj.id }}/comment">create comment..</a>
         </div>
         <div class="card-body">
             <ul class="list-group list-group-flush">
                 {% for cmt in cmt_list %}
                 <li class="list-group-item shadow p-3 mb-3">
-                    {{ cmt.opinion }}
-                    <sup class="float-end"> {{ cmt.created_at }} </sup>
+                    <sup class="float-start"> {{ cmt.created_at }} </sup>
+                    <article class="cmt_list">
+                    <p class="w-75">{{ cmt.opinion_expressed }}</p>
                     <a
                         class="btn btn-outline-primary btn-sm"
                         href="/update-comment/{{ cmt.id }}"
                         >update</a
                     >
                     <a
-                        class="btn btn-outline-danger btn-sm"
+                        class="btn btn-outline-danger btn-sm mx-2"
                         href="/delete-comment/{{ cmt.id }}"
                         >delete</a
                     >
+                    </article>
                 </li>
-
                 {% endfor %}
             </ul>
         </div>
     </div>
 </div>
 {% endif %}
-
-<div class="container">
-    <form meliod="POST">
-        <div class="my-2">
-            <label for="exampleFormControlTextarea1" class="form-label">
-                <sub>comment form</sub>
-            </label>
-
-            <textarea
-                class="form-control"
-                required
-                name="opinion"
-                id="exampleFormControlTextarea1"
-                rows="3"
-            >
-                        {{ opinion }}
-                    </textarea
-            >
-        </div>
-
-        <button type="submit" class="btn btn-outline-primary btn-sm">
-            submit
-        </button>
-    </form>
-</div>
 
 <div class="container mt-3">
     <span class="d-flex">
@@ -104,4 +81,7 @@
     </ul>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
 {% endblock %}
