--- a/templates/item/update.html
+++ b/templates/item/update.html
@@ -36,10 +36,7 @@
                         name="description"
                         id="editor"
                         rows="3"
-                    >
-                            {{ obj.description }}
-                        </textarea
-                    >
+                    >{{ obj.description }}</textarea>
                 </div>
 
                 <div class="mb-3">
@@ -47,7 +44,6 @@
                 <input class="form-control w-25 mb-2" type="text" name="category" />
                     <input
                         type="file"
-                        required
                         class="form-control"
                         name="image_url"
                         placeholder="item image"
