--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -4,21 +4,23 @@
 
 {% block content %}
 
-    <h1 class="container display-6">register</h1>
-    <div class="container">
-        <div class="row my-5">
-            <form method="POST">
-                <div class="mb-3">
-                    <label>email</label>
-                    <input type="email" required placeholder="email" name="email" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label>password</label>
-                    <input type="password" required placeholder="password" name="password" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-outline-primary btn-sm">submit</button>
-            </form>
+<h1 class="container lead my-4">register</h1>
+<div class="container">
+    <form class="card p-3" method="POST">
+        <div class="card-body">
+        <div class="mb-3">
+            <label>email</label>
+            <input type="email" required placeholder="email" name="email" class="form-control">
         </div>
-    </div>
+        <div class="mb-3">
+            <label>password</label>
+            <input type="password" required placeholder="password" name="password" class="form-control">
+        </div>
+        </div>
+        <div class="card-footer">
+            <button type="submit" class="btn btn-outline-primary btn-sm">submit</button>
+        </div>
+    </form>
+</div>
 
 {% endblock %}
