--- a/templates/item/update.html
+++ b/templates/item/update.html
@@ -1,15 +1,11 @@
-
-{% extends "base.html" %}
-{% block title %} update {{ obj.title }} {% endblock%}
-
+{% extends "base.html" %} {% block title %} update {{ obj.title }} {% endblock%}
 {% block content %}
 
-    <h1 class="container lead my-4">update item</h1>
-    <div class="container">
-        <div class="row mb-4">
-
-            <form class="card p-3" method="POST" enctype="multipart/form-data">
-                <div class="card-body">
+<h1 class="container lead my-4">update item</h1>
+<div class="container">
+    <div class="row mb-4">
+        <form class="card p-3" method="POST" enctype="multipart/form-data">
+            <div class="card-body">
                 <div class="mb-3">
                     <input
                         type="text"
@@ -21,52 +17,68 @@
                 </div>
 
                 <div class="mb-3">
+                    <link
+                        rel="stylesheet"
+                        href="https://cdnjs.cloudflare.com/ajax/libs/jodit/3.13.4/jodit.es2018.min.css"
+                    />
+                    <script src="https://cdnjs.cloudflare.com/ajax/libs/jodit/3.13.4/jodit.es2018.min.js"></script>
 
-                <link
-                    rel="stylesheet"
-                    href="https://cdnjs.cloudflare.com/ajax/libs/jodit/3.13.4/jodit.es2018.min.css"
-                />
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jodit/3.13.4/jodit.es2018.min.js"></script>
-
-                    <label for="editor" class="form-label"
-                        >description</label
-                    >
+                    <label for="editor" class="form-label">description</label>
                     <textarea
                         class="form-control"
                         name="description"
                         id="editor"
                         rows="3"
-                    >{{ obj.description }}</textarea>
+                    >
+{{ obj.description }}</textarea
+                    >
                 </div>
 
                 <div class="mb-3">
-                <sup>category</sup>
-                <input class="form-control w-25 mb-2" type="text" name="category" />
-                <input
-                    type="file"
-                    class="form-control"
-                    name="image_url"
-                    placeholder="item image"
-                />
-                </div>
+                    <sup>category</sup>
+                    <input
+                        class="form-control w-25 mb-2"
+                        type="text"
+                        name="category"
+                    />
+                    <input
+                        type="file"
+                        class="form-control"
+                        name="image_url"
+                        placeholder="item image"
+                    />
                 </div>
 
-                <div class="card-footer">
+                {% if obj.image_url %}
+                <figure class="list-group-item list-group-item-danger d-inline-block p-3">
+                    <figcaption><sup>image</sup></figcaption>
+                    <img width="128" src="{{ obj.image_url }}" />
+                    <input
+                        id="delbool"
+                        type="checkbox"
+                        name="delete_bool"
+                        class="ms-2 form-check-input"
+                    />
+                    <label for="deletebool" class="form-check-label"
+                        >delete</label
+                    >
+                </figure>
+                {% endif %}
+            </div>
+
+            <div class="card-footer">
                 <button type="submit" class="btn btn-outline-primary btn-sm">
                     submit
                 </button>
-                </div>
-                
-            </form>
-        </div>
+            </div>
+        </form>
     </div>
+</div>
 
-{% endblock %}
-
-{% block scripts %}
+{% endblock %} {% block scripts %}
 
 <script>
-    $('textarea').each(function () {
+    $("textarea").each(function () {
         var editor = Jodit.make(this);
     });
 </script>
