--- a/templates/item/list.html
+++ b/templates/item/list.html
@@ -18,7 +18,8 @@
                                 <h2 class="lead">{{ obj.title }}</h2>
                             </div>
                             <div class="card-header">
-                                <h2 class="lead">owner item id: {{ obj.owner_item_id }}</h2>
+                                <sub>item id: {{ obj.id }}</sub>
+                                <h2 class="lead"><sub>owner item id:</sub>{{ obj.owner_item_id }}</h2>
                             </div>
 
                             <div class="card-body">
