--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,10 +24,17 @@
                     <a class="nav-link" href="/">home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/user-list/">user list</a>
+                    <a class="nav-link" href="/user-list">user list</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/item-list/">item list</a>
+                    <a class="nav-link" href="/item-list">item list</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/dump-item">dump</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/import-csv">import csv</a>
                 </li>
 
                 <li class="nav-item">
