--- a/templates/item/dislike.html
+++ b/templates/item/dislike.html
@@ -4,11 +4,8 @@
 
 {% block content %}
 
-    <div class="container">
+    <div class="container mt-4">
         <form method="POST">
-            <div class="mb-3">
-                <input type="checkbox" required placeholder="checkbox" name="downvote" value="{{ downvote }}" class="">
-            </div>
             <button type="submit" class="btn btn-outline-primary btn-sm">
                 downvote
             </button>
