--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -34,7 +34,32 @@
                     <a class="nav-link" href="/dump-item">dump</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/import-csv">import csv</a>
+                    <a class="nav-link" href="/import-csv">csv</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                    <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        id="navbarDropdown"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                    >
+                        reserve
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li>
+                            <a class="dropdown-item" href="reserve-add">add</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="/list-reserve">list</a>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider" />
+                        </li>
+
+                    </ul>
                 </li>
 
                 <li class="nav-item">
@@ -43,6 +68,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/redoc/">Redoc</a>
                 </li>
+
                 <li class="nav-item dropdown">
                     <a
                         class="nav-link dropdown-toggle"
@@ -67,6 +93,7 @@
 
                     </ul>
                 </li>
+
             </ul>
 
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
