--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,12 @@
+
+.flex_start{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: stretch;
+}
 .error_list{
 	height: 66vh;
 	display: flex;
