--- a/templates/item/update.html
+++ b/templates/item/update.html
@@ -59,7 +59,7 @@
                         name="delete_bool"
                         class="ms-2 form-check-input"
                     />
-                    <label for="deletebool" class="form-check-label"
+                    <label for="delbool" class="form-check-label"
                         >delete</label
                     >
                 </figure>
