--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -50,7 +50,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="reserve-add">add</a>
+                            <a class="dropdown-item" href="/reserve-add">add</a>
                         </li>
                         <li>
                             <a class="dropdown-item" href="/list-reserve">list</a>
