--- a/templates/index.html
+++ b/templates/index.html
@@ -4,41 +4,38 @@
 
 {% block content %}
 
-    <h1 class="container display-6 my-5">home user..</h1>
-    <div class="container">
-        {% if current_user %}
-        current_user: {{ current_user.email }}
-        {% endif %}
-        <div class="row">
-            {% if obj_list %}
-                {% for obj in obj_list %}
-                    <div class="col-lg-4 col-md-3 col-sm-10 mr-auto">
-                        <div class="card shadow-sm p-3 mb-3 bg-body rounded">
+<h1 class="container lead my-5">home user..</h1>
+<div class="container flex_start">
+    {% if current_user %}
+    current_user: {{ current_user.email }}
+    {% endif %}
+    
+    {% if obj_list %}
+    {% for obj in obj_list %}
+    
+        <div class="card mt-2 me-1">
 
-                            <div class="card-header">
-                                <h2 class="lead">{{ obj.name }}</h2>
-                            </div>
-                            <div class="card-body">
-                                <p class="card-text">
-                                    <sup class="me-1">id</sup>
-                                    <small>{{ obj.id }}</small>
-                                    <span class="me-1">|</span>
-                                    <sup class="me-1">mail</sup>
-                                    <small>{{ obj.email }}</small>
-                                </p>
-                            </div>
-                            <div class="card-footer">
-                                <a class="btn btn-outline-primary btn-sm" href="/user-detail/{{obj.id}}">read more</a>
-                            </div>
+            <div class="card-header">
+                <h2 class="lead">{{ obj.name }}</h2>
+            </div>
+            <div class="card-body">
+                <p class="card-text">
+                    <sup class="me-1">id</sup>
+                    <small>{{ obj.id }}</small>
+                    <span class="me-1">|</span>
+                    <sup class="me-1">mail</sup>
+                    <small>{{ obj.email }}</small>
+                </p>
+            </div>
+            <div class="card-footer">
+                <a class="btn btn-outline-primary btn-sm" href="/user-detail/{{obj.id}}">read more</a>
+            </div>
 
-                        </div>
-                    </div>
-                {% endfor %}
-                {% else %}
-                <h6>no information available</h6>
-            {% endif %}
         </div>
 
-    </div>
-
+    {% endfor %}
+    {% else %}
+    <h6>no information available</h6>
+    {% endif %}
+</div>
 {% endblock %}
