--- a/templates/item/list.html
+++ b/templates/item/list.html
@@ -4,45 +4,41 @@
 
 {% block content %}
 
-    <h1 class="container display-6 my-4">item list..</h1>
-    <div class="container mb-4">
+<h1 class="container display-6 my-4">item list..</h1>
+<div class="container flex_start mb-4">
 
-        <div class="row">
-            {% if obj_list %}
+    {% if obj_list %}
+    {% for obj in obj_list %}
+    <div class="card mt-2 me-1">
 
-                {% for obj in obj_list %}
-                    <div class="col-xxl-3 col-xl-4 col-lg-6 col-md-8 col-sm-10 mr-auto">
-                        <div class="card shadow-sm p-3 mb-2 bg-body rounded">
-
-                            <div class="card-header">
-                                <h2 class="lead">{{ obj.title }}</h2>
-                            </div>
-                            <div class="card-header">
-                                <sub>item id: {{ obj.id }}</sub>
-                                <h2 class="lead"><sub>owner item id: </sub>{{ obj.owner_item_id }}</h2>
-                            </div>
-
-                            <div class="card-body">
-                                <p class="card-text">
-                                    {{ obj.description | striptags() | truncate(190, True, '...', 5) | safe }}
-                                </p>
-                            </div>
-
-                            <div class="card-footer">
-                                <a class="btn btn-outline-primary btn-sm" href="/item-detail/{{ obj.id }}">
-                                    read more
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-
-                    {% else %}
-                    <h6>no information available</h6>
-
-            {% endif %}
+        <div class="card-header">
+            <h2 class="lead">{{ obj.title }}</h2>
+        </div>
+        <div class="card-header">
+            <sub>item id: {{ obj.id }}</sub>
+            <h2 class="lead"><sub>owner item id: </sub>{{ obj.owner_item_id }}</h2>
         </div>
 
-    </div>
+        <div class="card-body">
+            <p class="card-text">
+                {{ obj.description | striptags() | truncate(190, True, '...', 5) | safe }}
+            </p>
+        </div>
+
+        <div class="card-footer">
+            <a class="btn btn-outline-primary btn-sm" href="/item-detail/{{ obj.id }}">
+                read more
+            </a>
+        </div>
+
+</div>
+{% endfor %}
+
+    {% else %}
+    <h6>no information available</h6>
+
+{% endif %}
+
+</div>
 
 {% endblock %}
