--- a/templates/reserve/list.html
+++ b/templates/reserve/list.html
@@ -6,11 +6,10 @@
 
 <h1 class="container lead my-4">list reserve..</h1>
 
-<div class="container d-flex">
+<div class="container flex_start">
     {% if obj_list %}
     {% for i in obj_list %}
-    <div class="col-xxl-6 col-sm-10">
-        <div class="card p-3 me-2 mb-3">
+    <div class="card mt-2 me-1">
 
         <ul class="card-header list-group list-group-horizontal">
             <li class="list-group-item">
@@ -34,10 +33,6 @@
                 <sup class="">end:</sup>
                 <time>{{ i.time_end.strftime("%d-%m-%Y %H:%M") }}</time>
             </li>
-            <li class="list-group-item">
-                <sup class="float-start">reserve_period:</sup>
-                <time>{{ i.reserve_period }}</time>
-            </li>
         </ul>
 
         <ul class="card-body list-group list-group-flush">
@@ -52,7 +47,7 @@
                 detail
             </a>
         </div>
-        </div>
+
     </div>
     {% endfor %}
     {% endif %}
