--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', path='favicon.ico') }}">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 
     <link href="{{ url_for('static', path='css/style.css') }}" rel="stylesheet">
 
@@ -36,6 +37,10 @@
 {% if msg %}
     {% include "components/alerts.html" %}
 {% endif %}
+{% if request.cookies["message"] %}
+    {% include "components/msg_output.html" %}
+{% endif %}
+
 
 </body>
 </html>
